Edit Completed On 06/ 08/23 Sunday

--- a/Task/FormTask_2(03_08_23).html
+++ b/Task/FormTask_2(03_08_23).html
@@ -64,13 +64,13 @@
                 </div>
                 
                 <div class="mb-1">
-                    <label class="form-label" for="rdbGender">Gender:-</label>
+                    <label class="form-label" for="gender">Gender:-</label>
                     <label for="rdbMale">Male</label>
-                    <input type="radio"  class="gender" value="Male" name="rdbGender" id="rdbMale">
+                    <input type="radio"  class="gender" value="Male" name="gender" id="rdbMale">
                     <label for="rdbFemale">Female</label>
-                    <input type="radio" class="gender"  value="female" name="rdbGender" id="rdbFemale">
+                    <input type="radio" class="gender"  value="female" name="gender" id="rdbFemale">
                     <label for="rdbOther">Other</label>
-                    <input type="radio" class="gender"  value="other" name="rdbGender" id="rdbOther">
+                    <input type="radio" class="gender"  value="other" name="gender" id="rdbOther">
                 </div>
                 <submit type="button" id="submit" class="btn btn-primary" onclick="saveUser()">Submit</submit>
               </form>
