--- a/Task/FormTask_2(03_08_23).html
+++ b/Task/FormTask_2(03_08_23).html
@@ -71,9 +71,11 @@
                     <input type="radio" class="gender"  value="female" name="gender" id="rdbFemale">
                     <label for="rdbOther">Other</label>
                     <input type="radio" class="gender"  value="other" name="gender" id="rdbOther">
+                    <input type="file" id="inputFileToLoad">
                 </div>
                 <submit type="button" id="submit" class="btn btn-primary" onclick="saveUser()">Submit</submit>
               </form>
+                
         </div>
     </div>
 
