--- a/Task/FormTask_2(03_08_23).html
+++ b/Task/FormTask_2(03_08_23).html
@@ -16,7 +16,8 @@
             border: 1px solid red;
         } */
         #outPut > div{
-            width: 70%;
+            /* width: 70%;any
+             */
             margin: 0 auto;
             padding-top: 40px;
         }
