--- a/Rough Work/Crud_1.html
+++ b/Rough Work/Crud_1.html
@@ -62,6 +62,8 @@
                     <th>Password</th>
                     <th>Gender</th>
                     <th>Hobbies</th>
+                    <th></th>
+                    <th></th>
                 </tr>
             </thead>
             <tbody>
@@ -72,6 +74,8 @@
                     <td>asdfa</td>
                     <td>Male</td>
                     <td>Dancing</td>
+                    <td><input type="button" name="edit" value="Edit" id="edit"></td>
+                    <td><input type="button" name="delete" value="Delete" id="delete"></td>
                 </tr>
             </tbody>
         </table>
